[gd_scene load_steps=5 format=3 uid="uid://dcfae62pc21bu"]

[ext_resource type="Texture2D" uid="uid://bwpt4087gmdfu" path="res://graphics/projectiles/player.png" id="1_0s0he"]
[ext_resource type="Script" path="res://scenes/objects/rebounder.gd" id="1_kxqqj"]
[ext_resource type="Texture2D" uid="uid://ghh02tewjbgp" path="res://graphics/projectiles/ball.png" id="2_34yvg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1v1bm"]
radius = 145.014

[node name="Rebounder" type="Node2D"]
script = ExtResource("1_kxqqj")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0.984314, 0.870588, 0.796078, 1)
rotation = -1.5708
texture = ExtResource("1_0s0he")

[node name="HeldItemSprite" type="Sprite2D" parent="."]
position = Vector2(95, 56)
scale = Vector2(0.445313, 0.445313)
texture = ExtResource("2_34yvg")

[node name="ThrowFromMarker" type="Marker2D" parent="."]
position = Vector2(211, 1)

[node name="CatchArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CatchArea"]
shape = SubResource("CircleShape2D_1v1bm")
metadata/_edit_lock_ = true

[node name="RethrowTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="CatchArea" to="." method="_on_catch_area_body_entered"]
[connection signal="timeout" from="RethrowTimer" to="." method="_on_rethrow_timer_timeout"]
